implement : 에러 핸들링 기능